tests/NormalTests/paczka1/small_fuzzy/18678552.err
Error in line 3: q35A S44 26,9
Error in line 1: gtp8M6N S44 47,6
Error in line 8: S44 A117 78,5
Error in line 16: PBKgRGH0 S44 12,59
